--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,18 @@
 .navy {
     color: #000066
 }
+
+thead th {
+    background-color: #0606a7;
+    color: white;
+    font-weight: normal !important;
+    text-align: center;
+}
+
+.btn-danger {
+    background-color: #a70606 !important;
+}
+
+.btn-primary {
+    background-color: #025acc !important;
+}
